<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UCL_BPmonitor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="noreadings">Number of Readings</string>
    <string name="interval">Time between Readings (in minutes)</string>
    <string name="duration">Total Time</string>
    <string name="clear">Clear</string>
    <string name="a24HourABP">24-Hour Ambulatory Blood Pressure Report?</string>
    <string name="custom">Custom?</string>
    <string name="newmeas">Start a new measurement</string>
    <string name="makerpt">Make a report from previous measurements on this app</string>
    <string name="timeframe">Select the time range you want your report to cover.</string>
    <string name="begintime">Enter the beginning date here</string>
    <string name="endtime">Enter the ending date here</string>
    <string name="reporthere">Here is your report.</string>
    <string name="emailrpt">Click here to email this report to your doctor</string>
     <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome">Hello and welcome to the blood pressure monitoring app. Please
        enter your information below. If you have not used this app before, click the register
        button.</string>
    <string name="register">Register</string>
    <string name="arrhythmia">Do you have a Heart Arrhythmia?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="arrhythmiaWarning">This app may not be suitable for you. Please consult
        your doctor.</string>
    <string name="hypertensionyesno">Do you have hypertension (high blood pressure)?</string>
    <string name="firstname">Enter your first name (given name)</string>
    <string name="lastname">Enter your last name (surname)</string>
    <string name="dob">Date of birth</string>
    <string name="gp">Name of your doctor (GP)</string>
    <string name="next">Next</string>
    <string name="medicationyesno">Do you take any medications?</string>
    <string name="specifykind">If so, please list them here.</string>
    <string name="nhsno">NHS number</string>
    <string name="newun">Create a username</string>
    <string name="newpwd">Create a password</string>
    <string name="choice">How do you want to record your blood pressure?</string>
    <string name="connectToCuff">Automaticaly connect to blood pressure cuff</string>
    <string name="manual">Enter data myself</string>
    <string name="bpHowTo">You should have a machine which measures your blood pressure.
        It will provide readings of your blood pressure at regular intervals. The BP readings
        will be displayed on the machine. Enter those in the following screen.</string>
    <string name="cuffinstr">You should have a blood pressure monitoring cuff that can 
        connect to Bluetooth. You should turn that on now.</string>
    <string name="OK">OK</string>
    <string name="ReadingNo">Reading Number</string>
    <string name="EnterSys">Enter Systolic BP (larger number)</string>
    <string name="EnterDia">Enter Diastolic BP (smaller number)</string>
    <string name="Clear">Clear</string>
    <string name="ShowSys">Systolic BP</string>
    <string name="ShowDia">Diastolic BP</string>
    <string name="OKNext">OK, Next</string>
    <string name="Done">Done</string>
    <string name="AllOK">All OK</string>
    <string name="bttext">Placeholder for Bluetooth Activity</string>
    <string name="deleteitem">Delete Reading</string>
    <string name="savenewitem">Save</string>
    
    
    
    <string name="app_registration">Press Ready when you are ready to take measurement.Then start the device.</string>
    <string name="bluetooth_not_available">Bluetooth is not available</string>
    <string name="bluetooth_health_profile_not_available">Bluetooth health profile is not available</string>
    <string name="channel_connection">Device connection</string>
    <string name="channel_connection_desc">some devices automatically initiate connection.If not, please click "connect" button</string>
    <string name="connect">Connect</string>
    <string name="connected">CONNECTED</string>
    <string name="connection_state">Connection State</string>
    <string name="data_ind">Data Indicator</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">DISCONNECTED</string>
    <string name="empty"> </string>
    <string name="none">None...</string>
    <string name="ok">Okay</string>
    <string name="read_data">Reading data...</string>
    <string name="read_data_done">Done with reading data...</string>
    <string name="select_device">Select a device</string>
    <string name="status_create_channel">Create channel status: %d</string>
    <string name="status_destroy_channel">Destroy channel status: %d</string>
    <string name="status_msg">Status Message</string>
    <string name="status_reg">App registration status: %d</string>
    <string name="status_unreg">App unregistration status: %d</string>
    <string name="unregister">Unregister</string>
    <string name="ready">Ready</string>
</resources>
