<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/hypertensionNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/hypertensionYes"
        android:layout_alignBottom="@+id/hypertensionYes"
        android:layout_alignRight="@+id/hypertensionyesno"
        android:text="@string/no" />

    <TextView
        android:id="@+id/hypertensionyesno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:text="@string/hypertensionyesno" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstName"
        android:layout_below="@+id/firstName"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/gpName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dob"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/gp"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/reg2next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/next" />

    <Button
        android:id="@+id/hypertensionYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hypertensionyesno"
        android:layout_below="@+id/hypertensionyesno"
        android:text="@string/yes" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hypertensionYes"
        android:layout_below="@+id/hypertensionNo"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lastName"
        android:layout_below="@+id/lastName"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/dob"
        android:inputType="date" >

        <requestFocus />
    </EditText>

</RelativeLayout>
