<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

        <requestFocus />

  <TextView
      android:id="@+id/Welcome"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:ems="20"
      android:text="@string/welcome" />

  <EditText
      android:id="@+id/loginpwd"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_above="@+id/login"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="17dp"
      android:ems="10"
      android:hint="@string/password"
      android:inputType="textPassword" />

  <EditText
      android:id="@+id/loginun"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_above="@+id/loginpwd"
      android:layout_alignLeft="@+id/loginpwd"
      android:layout_marginBottom="32dp"
      android:ems="10"
      android:hint="@string/username" />

  <Button
      android:id="@+id/login"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="16dp"
      android:text="@string/login" />

  <Button
      android:id="@+id/loginregister"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_above="@+id/loginun"
      android:text="@string/register" />

</RelativeLayout>
