<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="26dp"
        android:ems="50"
        android:text="@string/choice">

        <requestFocus />
    </TextView>

    <Button
        android:id="@+id/cuffconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/manualopt"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="54dp"
        android:text="@string/connectToCuff" />

    <Button
        android:id="@+id/manualopt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="174dp"
        android:text="@string/manual" />

</RelativeLayout>
